fix modal z-index

--- a/src/sass/base/tabula.scss
+++ b/src/sass/base/tabula.scss
@@ -1,4 +1,5 @@
 .tabula {
   color: var(--color-default-fore);
   background-color: var(--color-default-back);
+  z-index: var(--z-index-tabula);
 }
