--- a/src/sass/components/modal.scss
+++ b/src/sass/components/modal.scss
@@ -12,13 +12,16 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 100;
+  z-index: var(--z-index-modal);
   &.is-active {
     display: flex;
   }
   .modal-content {
+    max-height: 100%;
     max-width: 100%;
-    overflow: auto;
-    z-index: 101;
+    margin: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+    z-index: var(--z-index-modal-content);
   }
 }
